# Q6_leader

./: check_cams.py  dataflow-record-local.yaml  enable_openarm.py  left_arm.py  left_arm_slot2.py  readpic.py  right_arm.py  right_arm_slot2.py  teleop_collect.py  电机.txt
can_infra/: Makefile  README.md  build.sh  damiao_api.py  enable_openarm.py  main  main.py  motor_config.txt
can_infra/config/: motor.yaml
can_infra/docs/: design.md
can_infra/include/: can_bus.hpp  damiao_motor.hpp  motor_controller.hpp
can_infra/src/: main.cpp
datasets/: teleop_%Y%m%d_%H%M%S.npz
dora_env/teleop/: README.md  cluster.env  dataflow-record-graph.1.html  dataflow-record.yaml  dataflow-teleop-right.yaml  deploy_follower.sh  metadata-record.yaml  patch_capture_fourcc.sh  probe_cameras.sh  run_cluster.sh  run_record.sh  stop.sh  sync_follower.sh
dora_env/text/: test-camera-dataflow.yaml  test-comm-dataflow.yaml  test-record-dataflow.yaml  test_leader_zero_torque.py
dora_env/text/dora-camera-fps/: pyproject.toml
dora_env/text/dora-comm-test/: pyproject.toml
dora_env/text/dora-comm-test/src/dora_comm_test.egg-info/: PKG-INFO  entry_points.txt  requires.txt
openarm_ros2/install/: local_setup.sh  setup.sh
openarm_ros2/log/: latest_build
vita_monitor/: .gitignore
vita_monitor/docs/: 01_Hardware_硬件发送器.md  (+1 more)
wanren/dora_env/text/dora-print-positions/: pyproject.toml
wanren/dora_env/text/dora-print-positions/src/dora_print_positions/: main.py
wanren/dora_env/text/dora-print-positions/src/dora_print_positions.egg-info/: entry_points.txt  requires.txt  top_level.txt
(+499 files in other folders)
