[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-camera-fps"
version = "0.1.0"
description = "Probe node: count frames/sec per subscribed camera"
requires-python = ">=3.10"
dependencies = ["dora-rs>=0.5.0"]

[project.scripts]
dora-camera-fps = "dora_camera_fps.main:main"

[tool.setuptools.packages.find]
where = ["src"]
